--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,11 +7,9 @@
 </head>
 <body>
     <div class="container">
-        Before
-        <br>
+        <%- include('../partials/header.ejs')%>
+        <%- include('../partials/errorMessage.ejs') %> 
         <%- body %>
-        <br>
-        After
     </div>
 </body>
 </html>
