--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,13 +6,15 @@
     <title>MyLibrary</title>
     <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet">
     <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" rel="stylesheet">
-    
+    <link rel="stylesheet" href="/stylesheet/main.css">
 </head>
 <body>
     <div class="container">
         <%- include('../partials/header.ejs')%>
-        <%- include('../partials/errorMessage.ejs') %> 
-        <%- body %>
+        <div class="inner-container">
+            <%- include('../partials/errorMessage.ejs') %> 
+            <%- body %>
+        </div>
     </div>
 
     <script src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js"></script>
