--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
-    <nav>
-        <a href="/">MyLibrary</a>
+    <nav class="header-nav">
+        <a href="/" class="header-title">MyLibrary</a>
         <ul>
             <li><a href="/authors">Authors</a></li>
             <li><a href="/authors/new">Add Author</a></li>
