--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,7 +6,7 @@
     <title>MyLibrary</title>
     <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet">
     <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" rel="stylesheet">
-    <link rel="stylesheet" href="/stylesheet/main.css">
+    <link id="main-css" rel="stylesheet" href="/stylesheet/main.css">
 </head>
 <body>
     <div class="container">
